[package]
name      = "thermo"
version   = "0.0.0"
authors   = ["RJ Rybarczyk <rj@rybar.tech>"]
description = "A library for thermodynamics calculations"
homepage  = "https://github.com/rrybarczyk/thermo"
license   = "CC0-1.0"
edition   = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
